# OtusProjectLZW

./: README.md
modular/: CMakeLists.txt
modular/include/: lzw_exceptions.h  lzw_file_work.h  lzw_functions.h  lzw_program.h
modular/src/: CMakeLists.txt  lzw_file_work.cpp  lzw_functions.cpp  lzw_program.cpp
single_file/src/: lzw_functions.cpp
src/: lzw_functions.cpp
