cmake_minimum_required(VERSION 3.17)
project("lzw_otus" VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(LOCAL_INCLUDE ${CMAKE_SOURCE_DIR}/include)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_VERBOSE_MAKEFILE)

add_subdirectory(src)

install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_SOURCE_DIR}/out)
